# StreamEnhance

./: .gitignore  .replit  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.js
attached_assets/: Pasted-Project-Requirements-Document-RTSP-Livestream-Overlay-Manager-Nice-brief-here-s-a-clear-simp-1760424728861_1760424728862.txt
backend/: .env.example  requirements.txt  run.py
backend/app/: __init__.py  database.py
backend/app/models/: overlay.py  stream.py
backend/app/routes/: overlay_routes.py  stream_routes.py
backend/app/services/: transcoder.py
src/: App.jsx  index.css
src/components/: OverlayCanvas.jsx  OverlayEditor.jsx  StreamManager.jsx  VideoPlayer.jsx
src/services/: api.js
