[project]
name = "StreamEnhance"
version = "0.1.0"
description = "StreamEnhance — an RTSP livestream overlay manager that ingests RTSP streams, generates HLS output, and lets you create, position and manage dynamic overlays (text/images) in a web UI."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
]
